--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div class="box">
             <h3>About Us</h3>
-            <p>Want to know more about all the Countries in the world? You came to right place. Free Bird provides you the details of Countries!</p>
+            <p>Want to know more about all the Countries in the world? You came to right place. Free Bird provides you the details of the Countries!</p>
         </div>
 
         <div class="box">
