--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <section class="home">
 <center>
     <div class="container_2">
-            <h1> COUNTRIES DATA </h1>
+            <h1> COUNTRIES INFO </h1>
             <input type="search" class="a" placeholder="Country Name..." id="name">
             <br>
          <input type="submit" class="a" value="Get Data" id="submit" onclick="save()">
